# jp-assist-ai

./: .gitignore  README.md  create_project.sh  pyproject.toml
docs/: architecture.md  prompts.md  roadmap.md
scripts/: build_mac.sh  build_win.ps1  dev_run.sh
src/jp_assist_ai/adapters/capture/: mac_capture.py
src/jp_assist_ai/adapters/hotkeys/: mac_hotkeys.py
src/jp_assist_ai/adapters/llm/: base.py  openai_llm.py
src/jp_assist_ai/adapters/ocr/: paddle_ocr.py
src/jp_assist_ai/app/: main.py  startup.py  tray.py
src/jp_assist_ai/app/overlay/: annotation_canvas.py  floating_capture_window.py  overlay_window.py  region_frame_selector.py
src/jp_assist_ai/app/screens/: settings_window.py
src/jp_assist_ai/config/: settings.py
src/jp_assist_ai/services/: translate_service.py
